--- a/CSS/alaasar.css
+++ b/CSS/alaasar.css
@@ -117,7 +117,9 @@ ul{
 @keyframes left-move {
     50%{
         left: 0;
-        border-radius: 50%;
+        top: 25%;
+        transform: translateY(-50%);
+        border-radius: 6px;
         width: 12px;
         height: 12px;
     }
@@ -133,7 +135,9 @@ ul{
 @keyframes right-move {
     50%{
         right: 0;
-        border-radius: 50%;
+        bottom: 25%;
+        transform: translateY(50%);
+        border-radius: 6px;
         width: 12px;
         height: 12px;
     }
@@ -171,6 +175,12 @@ ul{
     width: 204px;
     background-repeat: no-repeat;
     position: absolute;
+    z-index: -1;
+}
+@media (max-width:768px) {
+    .dots{
+        display: none;
+    }
 }
 .dots-up{
     top: 200px;
@@ -1084,6 +1094,7 @@ header .container > ul > li > a:hover::after{
     border: 1px solid #d4d4d4;
     border-radius: 5px;
     text-align: center;
+    background-color: white;
     transition: var(--transition-time);
 }
 .events .time .unit:hover ,
@@ -1107,10 +1118,12 @@ header .container > ul > li > a:hover::after{
     transition: var(--transition-time);
 }
 .events h3{
-    margin-top: 40px;
+    margin: 40px auto 0;
     text-transform: capitalize;
     font-size: 30px;
     text-align: center;
+    background-color: white;
+    width: fit-content;
 }
 .events p{
     line-height: var(--p-height);
@@ -1177,6 +1190,7 @@ header .container > ul > li > a:hover::after{
     padding: var(--section-padding) 0;
     background-color: var(--section-background);
     position: relative;
+    z-index: 0;
 }
 .pricing .container{
     display: grid;
